fixing the footer/header alignment issue.

--- a/app/src/sass/footer.scss
+++ b/app/src/sass/footer.scss
@@ -257,8 +257,12 @@ $sidebar-break: 870px;
 }
 
 @media only screen and (min-width: 1372px) {
+  footer .foot-info .foot-contact {
+    padding: 0 50px 0 0;
+    width: 350px;
+  }
   .foot-contact p {
     text-align: left;
-    padding-left: 28%;
+    padding-left: 5vw;
   }
 }
