--- a/app/src/sass/header.scss
+++ b/app/src/sass/header.scss
@@ -31,7 +31,7 @@ header {
                     margin-right: $header-footer-margins;
                 }
                 &:first-child {
-                    margin-left: 5%;
+                    margin-left: 5vw;
                     margin-right: 0;
                 }
             }
